# Security-Event-Monitoring

./: .gitignore  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/app/: crud.py  main.py  models.py  outbox.py  rate_limiter.py
backend/app/api/: deps.py  logging.py  main.py
backend/app/api/routes/: events.py  login.py  users.py
backend/app/core/: config.py  connection_manager.py  db.py  redis.py  security.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 843f2a664e69_update_outbox_event_created_at_timezone.py  aac9dd062db9_add_outbox_model.py  b27342540601_init.py  d092ff2305b2_add_security_events_table.py  ffa21330d948_add_user_relationship_to_event_table.py
frontend/: app.js  index.html  styles.css
