[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.48.0",
]
